--- a/MathGame/App.xaml
+++ b/MathGame/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application x:Class="MathGame_WPF.App"
+﻿<Application x:Class="MathGame.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MathGame_WPF"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:MathGame"
+             StartupUri="LoginWindow.xaml">
     <Application.Resources>
-         
     </Application.Resources>
 </Application>
