--- a/MathGame/MainWindow.xaml
+++ b/MathGame/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Name="windowMain" x:Class="MathGame_WPF.MainWindow"
+﻿<Window x:Name="windowMain" x:Class="MathGame.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MathGame_WPF"
+        xmlns:local="clr-namespace:MathGame"
         mc:Ignorable="d"
-        Title="Math Game" ResizeMode="NoResize" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" FontFamily="Segoe UI Semibold" FontSize="17" Icon="Math.ico">
+        Title="Math Game" ResizeMode="NoResize" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" FontFamily="Segoe UI Semibold" FontSize="17" Icon="Math.ico" Closing="windowMain_Closing">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
@@ -14,6 +14,8 @@
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Border Grid.Column="0" BorderBrush="Black" BorderThickness="1,1,0,1" Margin="10,10,0,10">
             <StackPanel>
@@ -50,6 +52,12 @@
                 <Button x:Name="btnDivisionMedium" Width="125" Height="30" Content="Medium" Margin="10" Click="btnDivisionMedium_Click" />
                 <Button x:Name="btnDivisionHard" Width="125" Height="30" Content="Hard" Margin="10" Click="btnDivisionHard_Click" />
             </StackPanel>
+        </Border>
+        <Border Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" BorderBrush="White" BorderThickness="1,1,0,1" Margin="10,0,0,10">
+            <Button x:Name="btnAchievements" Width="125" Height="30" Content="_Achievements" Click="btnAchievements_Click" />
+        </Border>
+        <Border Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2" BorderBrush="White" BorderThickness="1,1,0,1" Margin="0,0,10,10">
+            <Button x:Name="btnBack" Width="125" Height="30" Content="_Back" Click="btnBack_Click" IsCancel="True" />
         </Border>
     </Grid>
 </Window>
