--- a/MathGame/QuestionWindow.xaml
+++ b/MathGame/QuestionWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Name="windowQuestion" x:Class="MathGame_WPF.QuestionWindow"
+﻿<Window x:Name="windowQuestion" x:Class="MathGame.QuestionWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MathGame_WPF"
+        xmlns:local="clr-namespace:MathGame"
         mc:Ignorable="d"
         Title="QuestionWindow" Closing="windowQuestion_Closing" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" FontFamily="Segoe UI Semibold" FontSize="17" Icon="Math.ico">
     <Grid>
@@ -19,7 +19,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Border Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" BorderBrush="Black" BorderThickness="1" Margin="10">
-            <TextBlock x:Name="lblQuestion" Width="200" TextAlignment="Center" FontSize="20" />
+            <TextBlock x:Name="lblQuestion" Width="200" TextAlignment="Center" FontSize="20" Text="{Binding Path=QuestionToString, Mode=OneWay}" />
         </Border>
         <GroupBox Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Margin="10">
             <StackPanel>
@@ -32,18 +32,18 @@
 
         <StackPanel Grid.Column="2" Grid.Row="0" Grid.RowSpan="3"  Margin="0,0,10,0">
             <GroupBox Header="Tries Left">
-                <TextBlock x:Name="lblAttempts" TextAlignment="Center" Margin="5" />
+                <TextBlock x:Name="lblAttempts" TextAlignment="Center" Text="{Binding Path=AttemptsRemainingToString, Mode=OneWay}" Margin="5" />
             </GroupBox>
             <GroupBox Header="Score">
-                <TextBlock x:Name="lblScore" TextAlignment="Center" Margin="5" />
+                <TextBlock x:Name="lblScore" TextAlignment="Center" Text="{Binding Path=ScoreToString, Mode=OneWay}" Margin="5" />
             </GroupBox>
             <GroupBox Header="Remaining">
-                <TextBlock x:Name="lblQuestionsRemaining" TextAlignment="Center" Margin="5" />
+                <TextBlock x:Name="lblQuestionsRemaining" TextAlignment="Center" Text="{Binding Path=QuestionsRemaining, Mode=OneWay}" Margin="5" />
             </GroupBox>
         </StackPanel>
 
-        <TextBlock x:Name="lblComment" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="3" TextAlignment="Center" />
-        <Button x:Name="btnCheck" Grid.Column="0" Grid.Row="3" Width="100" Height="30" Content="_Check" IsDefault="True" Margin="10" Click="btnCheck_Click" />
+        <TextBlock x:Name="lblComment" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="3" Text="{Binding Path=Comment, Mode=TwoWay}" TextAlignment="Center" />
+        <Button x:Name="btnCheck" Grid.Column="0" Grid.Row="3" Width="100" Height="30" Content="_Check" IsDefault="True" Margin="10"  Click="btnCheck_Click" IsEnabled="False" />
         <Button x:Name="btnNext" Grid.Column="1" Grid.Row="3" Width="100" Height="30" Content="_Next" IsEnabled="False" Click="btnNext_Click" Margin="10" />
         <Button x:Name="btnNewGame" Grid.Column="2" Grid.Row="3" Width="125" Height="30" Content="New _Game"  IsEnabled="False" IsCancel="True" Click="btnNewGame_Click" Margin="10" />
     </Grid>
