--- a/MathGame/App.xaml
+++ b/MathGame/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MathGame"
-             StartupUri="LoginWindow.xaml">
+             StartupUri="Windows\LoginWindow.xaml">
     <Application.Resources>
     </Application.Resources>
 </Application>
