--- a/MathGame/Windows/NewAchievementWindow.xaml
+++ b/MathGame/Windows/NewAchievementWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:MathGame"
         mc:Ignorable="d"
         Title="Achievement Unlocked!" Closing="windowNewAchievement_Closing" Icon="Math.ico" WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight" FontFamily="Segoe UI Semibold" FontSize="17">
-    <Grid>
+    <Grid Margin="10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
@@ -18,10 +18,10 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0" Width="300" FontSize="20" TextAlignment="Center" Text="Achievement Unlocked!" Margin="10" />
-        <TextBlock Grid.Row="1" TextAlignment="Center" Margin="10" Text="{Binding Path=Name, Mode=TwoWay}" />
-        <TextBlock Grid.Row="2" TextAlignment="Center" Margin="10" Text="{Binding Path=PointsToString, Mode=OneWay}" />
-        <TextBlock Grid.Row="3" Height="72" TextAlignment="Center" Margin="10" Text="{Binding Path=Description, Mode=TwoWay}" />
-        <Button x:Name="btnContinue" Grid.Row="4" Width="120" Height="30" Margin="10" Content="_Continue" Click="btnContinue_Click" />
+        <TextBlock Grid.Column="0" Grid.Row="0" Width="300" FontSize="20" TextAlignment="Center" Text="Achievement Unlocked!" Margin="0,0,0,10" />
+        <TextBlock Grid.Row="1" TextAlignment="Center" Text="{Binding Path=Name, Mode=TwoWay}" Margin="0,0,0,10" />
+        <TextBlock Grid.Row="2" TextAlignment="Center" Text="{Binding Path=PointsToString, Mode=OneWay}" Margin="0,0,0,10" />
+        <TextBlock Grid.Row="3" Height="72" TextAlignment="Center" Text="{Binding Path=Description, Mode=TwoWay}" Margin="0,0,0,10" />
+        <Button x:Name="btnContinue" Grid.Row="4" Width="120" Height="30" Content="_Continue" Click="btnContinue_Click" IsCancel="True" IsDefault="True" />
     </Grid>
 </Window>
