Implement User Control Library

--- a/MathGame/Windows/AchievementsWindow.xaml
+++ b/MathGame/Windows/AchievementsWindow.xaml
@@ -3,15 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MathGame"
         mc:Ignorable="d"
         Title="Achievements" ResizeMode="NoResize" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" FontFamily="Segoe UI Semibold" FontSize="17" Icon="Math.ico" Closing="windowAchievements_Closing">
     <Grid>
-        <Grid.Resources>
-            <DataTemplate x:Key="achievementNameTemplate">
-                <TextBlock Text="{Binding Path=Name}" />
-            </DataTemplate>
-        </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
@@ -22,7 +16,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <GroupBox Grid.Column="0" Grid.Row="0" Header="Unlocked Achievements" Margin="10,10,10,5">
-            <ListBox x:Name="lstUnlocked" Height="300" Width="300" ItemsSource="{Binding}" ItemTemplate="{StaticResource achievementNameTemplate}" Margin="10" ScrollViewer.VerticalScrollBarVisibility="Visible" SelectionChanged="lstUnlocked_SelectionChanged" />
+            <ListBox x:Name="lstUnlocked" Height="300" Width="300" ItemsSource="{Binding}"  Margin="10" ScrollViewer.VerticalScrollBarVisibility="Visible" SelectionChanged="lstUnlocked_SelectionChanged" />
         </GroupBox>
         <GroupBox Grid.Column="1" Grid.Row="0" Header="Achievement Information" Margin="10,10,10,5">
             <StackPanel Margin="10">
@@ -32,7 +26,7 @@
             </StackPanel>
         </GroupBox>
         <GroupBox Grid.Column="0" Grid.Row="1" Header="Locked Achievements" Margin="10,5,10,10">
-            <ListBox x:Name="lstLocked" Height="300" Width="300" ItemsSource="{Binding}" ItemTemplate="{StaticResource achievementNameTemplate}"  Margin="10" ScrollViewer.VerticalScrollBarVisibility="Visible" SelectionChanged="lstLocked_SelectionChanged" />
+            <ListBox x:Name="lstLocked" Height="300" Width="300" ItemsSource="{Binding}" Margin="10" ScrollViewer.VerticalScrollBarVisibility="Visible" SelectionChanged="lstLocked_SelectionChanged" />
         </GroupBox>
         <GroupBox Grid.Column="1" Grid.Row="1" Header="Achievement Information" Margin="10,5,10,10">
             <StackPanel Margin="10">
