--- a/MathGame/Windows/MainWindow.xaml
+++ b/MathGame/Windows/MainWindow.xaml
@@ -3,7 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MathGame"
         mc:Ignorable="d"
         Title="Math Game" ResizeMode="NoResize" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" FontFamily="Segoe UI Semibold" FontSize="17" Icon="Math.ico" Closing="windowMain_Closing">
     <Grid Margin="10">
@@ -26,7 +25,7 @@
                 <Button x:Name="btnAdditionHard" Width="125" Height="30" Content="Hard" Margin="10" Click="btnAdditionHard_Click" />
             </StackPanel>
         </Border>
-        <Border Grid.Column="1" BorderBrush="Black" BorderThickness="1,1,0,1" Margin="0,0,0,10">
+        <Border Grid.Column="1" Grid.Row="0" BorderBrush="Black" BorderThickness="1,1,0,1" Margin="0,0,0,10">
             <StackPanel>
                 <TextBlock Text="Subtraction" Margin="10" TextAlignment="Center" />
                 <Button x:Name="btnSubtractionPractice" Width="125" Height="30" Content="Practice" Margin="10" Click="btnSubtractionPractice_Click" />
@@ -35,7 +34,7 @@
                 <Button x:Name="btnSubtractionHard" Width="125" Height="30" Content="Hard" Margin="10" Click="btnSubtractionHard_Click" />
             </StackPanel>
         </Border>
-        <Border Grid.Column="2" BorderBrush="Black" BorderThickness="1,1,0,1" Margin="0,0,0,10">
+        <Border Grid.Column="2" Grid.Row="0" BorderBrush="Black" BorderThickness="1,1,0,1" Margin="0,0,0,10">
             <StackPanel>
                 <TextBlock Text="Multiplication" Margin="10" TextAlignment="Center" />
                 <Button x:Name="btnMultiplicationPractice" Width="125" Height="30" Content="Practice" Margin="10" Click="btnMultiplicationPractice_Click" />
@@ -44,7 +43,7 @@
                 <Button x:Name="btnMultiplicationHard" Width="125" Height="30" Content="Hard" Margin="10" Click="btnMultiplicationHard_Click" />
             </StackPanel>
         </Border>
-        <Border Grid.Column="3" BorderBrush="Black" BorderThickness="1" Margin="0,0,0,10">
+        <Border Grid.Column="3" Grid.Row="0" BorderBrush="Black" BorderThickness="1" Margin="0,0,0,10">
             <StackPanel>
                 <TextBlock Text="Division" Margin="10" TextAlignment="Center" />
                 <Button x:Name="btnDivisionPractice" Width="125" Height="30" Content="Practice" Margin="10" Click="btnDivisionPractice_Click" />
