Added Very Hard mode
I also switched to using Enums for determining game type and difficulty, so false values can't be sent.

--- a/MathGame/Views/GameOptionsPage.xaml
+++ b/MathGame/Views/GameOptionsPage.xaml
@@ -18,40 +18,44 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Border Grid.Column="0" BorderBrush="#CCCCCC" BorderThickness="1,1,0,1" Margin="0,0,0,10">
+        <Border Grid.Column="0" Grid.Row="0" BorderBrush="#CCCCCC" BorderThickness="1,1,0,1" Margin="0,0,0,10" Padding="10">
             <StackPanel>
-                <TextBlock Text="Addition" Margin="10" TextAlignment="Center" />
-                <Button x:Name="BtnAdditionPractice" Width="145" Content="Practice" Margin="10" Click="BtnAdditionPractice_Click" />
-                <Button x:Name="BtnAdditionEasy" Width="145" Content="Easy" Margin="10" Click="BtnAdditionEasy_Click" />
-                <Button x:Name="BtnAdditionMedium" Width="145" Content="Medium" Margin="10" Click="BtnAdditionMedium_Click" />
-                <Button x:Name="BtnAdditionHard" Width="145" Content="Hard" Margin="10" Click="BtnAdditionHard_Click" />
+                <TextBlock Text="Addition" TextAlignment="Center" Margin="0,0,0,10" />
+                <Button x:Name="BtnAdditionPractice" Width="145" Content="Practice" Click="BtnAdditionPractice_Click" Margin="0,0,0,10" />
+                <Button x:Name="BtnAdditionEasy" Width="145" Content="Easy" Click="BtnAdditionEasy_Click" Margin="0,0,0,10" />
+                <Button x:Name="BtnAdditionMedium" Width="145" Content="Medium" Click="BtnAdditionMedium_Click" Margin="0,0,0,10" />
+                <Button x:Name="BtnAdditionHard" Width="145" Content="Hard" Click="BtnAdditionHard_Click" Margin="0,0,0,10" />
+                <Button x:Name="BtnAdditionVeryHard" Width="145" Content="Very Hard" Click="BtnAdditionVeryHard_Click" />
             </StackPanel>
         </Border>
-        <Border Grid.Column="1" Grid.Row="0" BorderBrush="#CCCCCC" BorderThickness="1,1,0,1" Margin="0,0,0,10">
+        <Border Grid.Column="1" Grid.Row="0" BorderBrush="#CCCCCC" BorderThickness="1,1,0,1" Margin="0,0,0,10" Padding="10">
             <StackPanel>
-                <TextBlock Text="Subtraction" Margin="10" TextAlignment="Center" />
-                <Button x:Name="BtnSubtractionPractice" Width="145" Content="Practice" Margin="10" Click="BtnSubtractionPractice_Click" />
-                <Button x:Name="BtnSubtractionEasy" Width="145" Content="Easy" Margin="10" Click="BtnSubtractionEasy_Click" />
-                <Button x:Name="BtnSubtractionMedium" Width="145" Content="Medium" Margin="10" Click="BtnSubtractionMedium_Click" />
-                <Button x:Name="BtnSubtractionHard" Width="145" Content="Hard" Margin="10" Click="BtnSubtractionHard_Click" />
+                <TextBlock Text="Subtraction" TextAlignment="Center" Margin="0,0,0,10" />
+                <Button x:Name="BtnSubtractionPractice" Width="145" Content="Practice" Click="BtnSubtractionPractice_Click" Margin="0,0,0,10" />
+                <Button x:Name="BtnSubtractionEasy" Width="145" Content="Easy" Click="BtnSubtractionEasy_Click" Margin="0,0,0,10" />
+                <Button x:Name="BtnSubtractionMedium" Width="145" Content="Medium" Click="BtnSubtractionMedium_Click" Margin="0,0,0,10" />
+                <Button x:Name="BtnSubtractionHard" Width="145" Content="Hard" Click="BtnSubtractionHard_Click" Margin="0,0,0,10" />
+                <Button x:Name="BtnSubtractionVeryHard" Width="145" Content="Very Hard" Click="BtnSubtractionVeryHard_Click" />
             </StackPanel>
         </Border>
-        <Border Grid.Column="2" Grid.Row="0" BorderBrush="#CCCCCC" BorderThickness="1,1,0,1" Margin="0,0,0,10">
+        <Border Grid.Column="2" Grid.Row="0" BorderBrush="#CCCCCC" BorderThickness="1,1,0,1" Margin="0,0,0,10" Padding="10">
             <StackPanel>
-                <TextBlock Text="Multiplication" Margin="10" TextAlignment="Center" />
-                <Button x:Name="BtnMultiplicationPractice" Width="145" Content="Practice" Margin="10" Click="BtnMultiplicationPractice_Click" />
-                <Button x:Name="BtnMultiplicationEasy" Width="145" Content="Easy" Margin="10" Click="BtnMultiplicationEasy_Click" />
-                <Button x:Name="BtnMultiplicationMedium" Width="145" Content="Medium" Margin="10" Click="BtnMultiplicationMedium_Click" />
-                <Button x:Name="BtnMultiplicationHard" Width="145" Content="Hard" Margin="10" Click="BtnMultiplicationHard_Click" />
+                <TextBlock Text="Multiplication" TextAlignment="Center" Margin="0,0,0,10" />
+                <Button x:Name="BtnMultiplicationPractice" Width="145" Content="Practice" Click="BtnMultiplicationPractice_Click" Margin="0,0,0,10" />
+                <Button x:Name="BtnMultiplicationEasy" Width="145" Content="Easy" Click="BtnMultiplicationEasy_Click" Margin="0,0,0,10" />
+                <Button x:Name="BtnMultiplicationMedium" Width="145" Content="Medium" Click="BtnMultiplicationMedium_Click" Margin="0,0,0,10" />
+                <Button x:Name="BtnMultiplicationHard" Width="145" Content="Hard" Click="BtnMultiplicationHard_Click" Margin="0,0,0,10" />
+                <Button x:Name="BtnMultiplicationVeryHard" Width="145" Content="Very Hard" Click="BtnMultiplicationVeryHard_Click" />
             </StackPanel>
         </Border>
-        <Border Grid.Column="3" Grid.Row="0" BorderBrush="#CCCCCC" BorderThickness="1" Margin="0,0,0,10">
+        <Border Grid.Column="3" Grid.Row="0" BorderBrush="#CCCCCC" BorderThickness="1,1,1,1" Margin="0,0,0,10" Padding="10">
             <StackPanel>
-                <TextBlock Text="Division" Margin="10" TextAlignment="Center" />
-                <Button x:Name="BtnDivisionPractice" Width="145" Content="Practice" Margin="10" Click="BtnDivisionPractice_Click" />
-                <Button x:Name="BtnDivisionEasy" Width="145" Content="Easy" Margin="10" Click="BtnDivisionEasy_Click" />
-                <Button x:Name="BtnDivisionMedium" Width="145" Content="Medium" Margin="10" Click="BtnDivisionMedium_Click" />
-                <Button x:Name="BtnDivisionHard" Width="145" Content="Hard" Margin="10" Click="BtnDivisionHard_Click" />
+                <TextBlock Text="Division" TextAlignment="Center" Margin="0,0,0,10" />
+                <Button x:Name="BtnDivisionPractice" Width="145" Content="Practice" Click="BtnDivisionPractice_Click" Margin="0,0,0,10" />
+                <Button x:Name="BtnDivisionEasy" Width="145" Content="Easy" Click="BtnDivisionEasy_Click" Margin="0,0,0,10" />
+                <Button x:Name="BtnDivisionMedium" Width="145" Content="Medium" Click="BtnDivisionMedium_Click" Margin="0,0,0,10" />
+                <Button x:Name="BtnDivisionHard" Width="145" Content="Hard" Click="BtnDivisionHard_Click" Margin="0,0,0,10" />
+                <Button x:Name="BtnDivisionVeryHard" Width="145" Content="Very Hard" Click="BtnDivisionVeryHard_Click" />
             </StackPanel>
         </Border>
         <Button x:Name="BtnAchievements" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Width="145" Content="_Achievements" Click="BtnAchievements_Click" />
