--- a/MathGame/Views/GameOptionsPage.xaml
+++ b/MathGame/Views/GameOptionsPage.xaml
@@ -7,7 +7,7 @@
       Title="Math Game"
       Style="{StaticResource PageStyle}"
       Loaded="Page_Loaded">
-    <Grid x:Name="Grid" Margin="10">
+    <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
@@ -21,44 +21,56 @@
         <Border Grid.Column="0" Grid.Row="0" BorderBrush="#CCCCCC" BorderThickness="1,1,0,1" Margin="0,0,0,10" Padding="10">
             <StackPanel>
                 <TextBlock Text="Addition" TextAlignment="Center" Margin="0,0,0,10" />
-                <Button x:Name="BtnAdditionPractice" Width="145" Content="Practice" Click="BtnAdditionPractice_Click" Margin="0,0,0,10" />
-                <Button x:Name="BtnAdditionEasy" Width="145" Content="Easy" Click="BtnAdditionEasy_Click" Margin="0,0,0,10" />
-                <Button x:Name="BtnAdditionMedium" Width="145" Content="Medium" Click="BtnAdditionMedium_Click" Margin="0,0,0,10" />
-                <Button x:Name="BtnAdditionHard" Width="145" Content="Hard" Click="BtnAdditionHard_Click" Margin="0,0,0,10" />
-                <Button x:Name="BtnAdditionVeryHard" Width="145" Content="Very Hard" Click="BtnAdditionVeryHard_Click" />
+                <ComboBox x:Name="CmbAddition" HorizontalContentAlignment="Center" SelectedIndex="0" Margin="0,0,0,10">
+                    <ComboBoxItem Content="Practice" />
+                    <ComboBoxItem Content="Easy" />
+                    <ComboBoxItem Content="Medium" />
+                    <ComboBoxItem Content="Hard" />
+                    <ComboBoxItem Content="Very Hard" />
+                </ComboBox>
+                <Button x:Name="BtnAddition" Width="200" Content="Play" Click="BtnAddition_Click"  Margin="0,0,0,10" />
             </StackPanel>
         </Border>
         <Border Grid.Column="1" Grid.Row="0" BorderBrush="#CCCCCC" BorderThickness="1,1,0,1" Margin="0,0,0,10" Padding="10">
             <StackPanel>
                 <TextBlock Text="Subtraction" TextAlignment="Center" Margin="0,0,0,10" />
-                <Button x:Name="BtnSubtractionPractice" Width="145" Content="Practice" Click="BtnSubtractionPractice_Click" Margin="0,0,0,10" />
-                <Button x:Name="BtnSubtractionEasy" Width="145" Content="Easy" Click="BtnSubtractionEasy_Click" Margin="0,0,0,10" />
-                <Button x:Name="BtnSubtractionMedium" Width="145" Content="Medium" Click="BtnSubtractionMedium_Click" Margin="0,0,0,10" />
-                <Button x:Name="BtnSubtractionHard" Width="145" Content="Hard" Click="BtnSubtractionHard_Click" Margin="0,0,0,10" />
-                <Button x:Name="BtnSubtractionVeryHard" Width="145" Content="Very Hard" Click="BtnSubtractionVeryHard_Click" />
+                <ComboBox x:Name="CmbSubtraction" HorizontalContentAlignment="Center" SelectedIndex="0" Margin="0,0,0,10">
+                    <ComboBoxItem Content="Practice" />
+                    <ComboBoxItem Content="Easy" />
+                    <ComboBoxItem Content="Medium" />
+                    <ComboBoxItem Content="Hard" />
+                    <ComboBoxItem Content="Very Hard" />
+                </ComboBox>
+                <Button x:Name="BtnSubtraction" Width="200" Content="Play" Click="BtnSubtraction_Click" Margin="0,0,0,10" />
             </StackPanel>
         </Border>
         <Border Grid.Column="2" Grid.Row="0" BorderBrush="#CCCCCC" BorderThickness="1,1,0,1" Margin="0,0,0,10" Padding="10">
             <StackPanel>
                 <TextBlock Text="Multiplication" TextAlignment="Center" Margin="0,0,0,10" />
-                <Button x:Name="BtnMultiplicationPractice" Width="145" Content="Practice" Click="BtnMultiplicationPractice_Click" Margin="0,0,0,10" />
-                <Button x:Name="BtnMultiplicationEasy" Width="145" Content="Easy" Click="BtnMultiplicationEasy_Click" Margin="0,0,0,10" />
-                <Button x:Name="BtnMultiplicationMedium" Width="145" Content="Medium" Click="BtnMultiplicationMedium_Click" Margin="0,0,0,10" />
-                <Button x:Name="BtnMultiplicationHard" Width="145" Content="Hard" Click="BtnMultiplicationHard_Click" Margin="0,0,0,10" />
-                <Button x:Name="BtnMultiplicationVeryHard" Width="145" Content="Very Hard" Click="BtnMultiplicationVeryHard_Click" />
+                <ComboBox x:Name="CmbMultiplication" HorizontalContentAlignment="Center" SelectedIndex="0" Margin="0,0,0,10">
+                    <ComboBoxItem Content="Practice" />
+                    <ComboBoxItem Content="Easy" />
+                    <ComboBoxItem Content="Medium" />
+                    <ComboBoxItem Content="Hard" />
+                    <ComboBoxItem Content="Very Hard" />
+                </ComboBox>
+                <Button x:Name="BtnMultiplication" Width="200" Content="Play" Click="BtnMultiplication_Click" Margin="0,0,0,10" />
             </StackPanel>
         </Border>
         <Border Grid.Column="3" Grid.Row="0" BorderBrush="#CCCCCC" BorderThickness="1,1,1,1" Margin="0,0,0,10" Padding="10">
             <StackPanel>
                 <TextBlock Text="Division" TextAlignment="Center" Margin="0,0,0,10" />
-                <Button x:Name="BtnDivisionPractice" Width="145" Content="Practice" Click="BtnDivisionPractice_Click" Margin="0,0,0,10" />
-                <Button x:Name="BtnDivisionEasy" Width="145" Content="Easy" Click="BtnDivisionEasy_Click" Margin="0,0,0,10" />
-                <Button x:Name="BtnDivisionMedium" Width="145" Content="Medium" Click="BtnDivisionMedium_Click" Margin="0,0,0,10" />
-                <Button x:Name="BtnDivisionHard" Width="145" Content="Hard" Click="BtnDivisionHard_Click" Margin="0,0,0,10" />
-                <Button x:Name="BtnDivisionVeryHard" Width="145" Content="Very Hard" Click="BtnDivisionVeryHard_Click" />
+                <ComboBox x:Name="CmbDivision" HorizontalContentAlignment="Center" SelectedIndex="0" Margin="0,0,0,10">
+                    <ComboBoxItem Content="Practice" />
+                    <ComboBoxItem Content="Easy" />
+                    <ComboBoxItem Content="Medium" />
+                    <ComboBoxItem Content="Hard" />
+                    <ComboBoxItem Content="Very Hard" />
+                </ComboBox>
+                <Button x:Name="BtnDivision" Width="200" Content="Play" Click="BtnDivision_Click" Margin="0,0,0,10" />
             </StackPanel>
         </Border>
-        <Button x:Name="BtnAchievements" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Width="145" Content="_Achievements" Click="BtnAchievements_Click" />
-        <Button x:Name="BtnBack" Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2" Width="145" Content="_Back" Click="BtnBack_Click" IsCancel="True" />
+        <Button x:Name="BtnAchievements" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Width="200" Content="_Achievements" Click="BtnAchievements_Click" />
+        <Button x:Name="BtnBack" Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2" Width="200" Content="_Back" Click="BtnBack_Click" IsCancel="True" />
     </Grid>
 </Page>
