--- a/MathGame/Views/MainWindow.xaml
+++ b/MathGame/Views/MainWindow.xaml
@@ -1,5 +1,4 @@
-﻿<Window x:Name="WindowMain"
-        x:Class="MathGame.Views.MainWindow"
+﻿<Window x:Class="MathGame.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,20 +6,17 @@
         mc:Ignorable="d"
         Icon="/Views/Math.ico"
         Style="{DynamicResource WindowStyle}"
-        Title="{Binding Path=Content.Title, ElementName=MainFrame}"
+        Title="{Binding Content.Title, ElementName=MainFrame}"
         WindowState="Maximized"
         ResizeMode="CanResize"
         SizeToContent="Manual"
         Loaded="WindowMain_Loaded">
-    <Grid x:Name="Grid" Margin="10">
-        <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" Source="LoginPage.xaml" SizeChanged="MainFrame_OnSizeChanged">
-            <Frame.LayoutTransform>
-                <ScaleTransform x:Name="ApplicationScaleTransform"
-                                CenterX="0"
-                                CenterY="0"
-                                ScaleX="{Binding ElementName=WindowMain, Path=ScaleValue}"
-                                ScaleY="{Binding ElementName=WindowMain, Path=ScaleValue}" />
-            </Frame.LayoutTransform>
-        </Frame>
-    </Grid>
+    <Viewbox Stretch="Uniform" Margin="10">
+        <Frame x:Name="MainFrame"
+            ScrollViewer.VerticalScrollBarVisibility="Auto"
+            ScrollViewer.HorizontalScrollBarVisibility="Auto"
+            ScrollViewer.CanContentScroll="True"
+            NavigationUIVisibility="Hidden"
+            Source="LoginPage.xaml" />
+    </Viewbox>
 </Window>
