--- a/MathGame/Views/QuestionPage.xaml
+++ b/MathGame/Views/QuestionPage.xaml
@@ -5,9 +5,8 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d"
       Title="Questions"
-      Style="{StaticResource PageStyle}"
-      Loaded="Page_Loaded">
-    <Grid x:Name="Grid" Margin="10">
+      Style="{StaticResource PageStyle}">
+    <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
@@ -20,7 +19,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Border Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" BorderBrush="#CCCCCC" BorderThickness="1" Margin="10">
-            <TextBlock x:Name="lblQuestion" Width="200" TextAlignment="Center" FontSize="20" Text="{Binding Path=QuestionToString, Mode=OneWay}" />
+            <TextBlock x:Name="lblQuestion" Width="200" TextAlignment="Center" FontSize="20" Text="{Binding QuestionToString}" />
         </Border>
         <GroupBox Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Margin="10">
             <StackPanel>
@@ -32,19 +31,18 @@
         </GroupBox>
         <StackPanel Grid.Column="2" Grid.Row="0" Grid.RowSpan="3" Margin="0,0,10,0">
             <GroupBox Header="Tries Left">
-                <TextBlock x:Name="lblAttempts" TextAlignment="Center" Text="{Binding Path=AttemptsRemainingToString, Mode=OneWay}" Margin="5" />
+                <TextBlock x:Name="lblAttempts" TextAlignment="Center" Text="{Binding AttemptsRemainingToString}" Margin="5" />
             </GroupBox>
             <GroupBox Header="Score">
-                <TextBlock x:Name="lblScore" TextAlignment="Center" Text="{Binding Path=ScoreToString, Mode=OneWay}" Margin="5" />
+                <TextBlock x:Name="lblScore" TextAlignment="Center" Text="{Binding ScoreToString}" Margin="5" />
             </GroupBox>
             <GroupBox Header="Remaining">
-                <TextBlock x:Name="lblQuestionsRemaining" TextAlignment="Center" Text="{Binding Path=QuestionsRemaining, Mode=OneWay}" Margin="5" />
+                <TextBlock x:Name="lblQuestionsRemaining" TextAlignment="Center" Text="{Binding QuestionsRemaining}" Margin="5" />
             </GroupBox>
         </StackPanel>
-
-        <TextBlock x:Name="lblComment" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="3" Text="{Binding Path=Comment, Mode=TwoWay}" TextAlignment="Center" />
-        <Button x:Name="BtnCheck" Grid.Column="0" Grid.Row="3" Width="100" Content="_Check" IsDefault="True" Margin="10" Click="BtnCheck_Click" IsEnabled="False" />
-        <Button x:Name="BtnNext" Grid.Column="1" Grid.Row="3" Width="100" Content="_Next" IsEnabled="False" Click="BtnNext_Click" Margin="10" />
-        <Button x:Name="BtnNewGame" Grid.Column="2" Grid.Row="3" Width="125" Content="New _Game" IsEnabled="False" IsCancel="True" Click="BtnNewGame_Click" Margin="10" />
+        <TextBlock x:Name="lblComment" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="3" Text="{Binding Comment}" TextAlignment="Center" />
+        <Button x:Name="BtnCheck" Grid.Column="0" Grid.Row="3" Width="200" Content="_Check" IsDefault="True" Margin="10" Click="BtnCheck_Click" IsEnabled="False" />
+        <Button x:Name="BtnNext" Grid.Column="1" Grid.Row="3" Width="200" Content="_Next" IsEnabled="False" Click="BtnNext_Click" Margin="10" />
+        <Button x:Name="BtnNewGame" Grid.Column="2" Grid.Row="3" Width="200" Content="New _Game" IsEnabled="False" IsCancel="True" Click="BtnNewGame_Click" Margin="10" />
     </Grid>
 </Page>
